vlib/v/checker/tests/like_operator_outside_orm_1_error.vv
fn main() {
	name := 'Luke'
	println(name like 'L%')
}
